--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,1 +1,8 @@
-## Ủa, đi đâu zậy bạn :<. Nhân vô cái mặt của con pikachu để trở về trang chủ nhe :>
+---
+title:  "Ét ô ét"
+layout: single
+permalink: /404.md
+author_profile: true
+---
+
+# Ủa, đi đâu zậy bạn :<. Nhân vô cái mặt của con pikachu ở bên trái để trở về trang chủ nhe :>
