--- a/404.md
+++ b/404.md
@@ -1,8 +1,9 @@
 ---
-title:  "Ét ô ét"
+<!-- title:  "Ét ô ét"
 layout: pages
 permalink: /404.md
-author_profile: true
+author_profile: true -->
+permalink: /404.html
 ---
 
 # Ủa, đi đâu zậy bạn :<. Nhân vô cái mặt của con pikachu ở bên trái để trở về trang chủ nhe :>
