--- a/404.md
+++ b/404.md
@@ -1,8 +1,8 @@
 ---
-<!-- title:  "Ét ô ét"
-layout: pages
-permalink: /404.md
-author_profile: true -->
+title:  "Ét ô ét"
+<!-- layout: pages -->
+<!-- permalink: /404.md -->
+<!-- author_profile: true -->
 permalink: /404.html
 ---
 
