--- a/404.md
+++ b/404.md
@@ -6,4 +6,4 @@ title:  "Ét ô ét"
 permalink: /404.html
 ---
 
-### ***Ủa, đi đâu zậy bạn :<. Nhân vô cái mặt của con pikachu ở bên trái để trở về trang chủ nhe :>***
+### ***Ủa, đi đâu zậy bạn :<. Nhấn vô cái mặt của con pìkáchù ở bên trái để trở về trang chủ nhe :>***
