Change the title

--- a/404.md
+++ b/404.md
@@ -1,5 +1,5 @@
 ---
-title:  "Ét ô ét"
+title:  "404 Page not found"
 <!-- layout: pages -->
 <!-- permalink: /404.md -->
 <!-- author_profile: true -->
