--- a/404.md
+++ b/404.md
@@ -6,4 +6,4 @@ title:  "404 Page not found"
 permalink: /404.html
 ---
 
-### ***Ủa, đi đâu zậy bạn :<. Nhấn vô cái mặt của con pìkáchù ở bên trái để trở về trang chủ nhe :>***
+### ***Ủa, đi đâu zậy bạn, hong có gì ở đây hết á. Nhấn vô cái mặt của con pìkáchù bên trái để trở về trang chủ nhe :>***
